--- a/css/custom-responsive.css
+++ b/css/custom-responsive.css
@@ -168,6 +168,7 @@
 .justify-content-between { justify-content: space-between; }
 .justify-content-around { justify-content: space-around; }
 .justify-content-center { justify-content: center; }
+.justify-content-end { justify-content: flex-end; }
 .align-items-center { align-items: center; }
 .flex-wrap { flex-wrap: wrap; }
 
